--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <packaging>jar</packaging>
 
     <name>memberservice</name>
-    <description></description>
+    <description>Member Service</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <properties>
